src/app/casino/gameview/gameview.component.css
/* ... */
@media only screen and (min-width: 482px) and (max-width: 1024px) {
    .provider-list {
        flex-wrap: nowrap;
        overflow: scroll;
        scroll-behavior: smooth;
    }

    .game-list {
        flex-wrap: nowrap;
        overflow: scroll;
        scroll-behavior: smooth;
        padding-left: 16px;
        margin-left: -16px;
    }

    .internal .game-list {
        flex-wrap: wrap;
        gap: 10px;
        justify-content: center;
    }

    .more-games-fade-right {
        background-image: linear-gradient(to left, rgba(var(--background-rgb), 1) 10%, rgba(var(--background-rgb), 0.01));
        right: -2px;
    }

    .more-games-fade-left {
        background-image: linear-gradient(to right, rgba(var(--background-rgb), 1) 10%, rgba(var(--background-rgb), 0.01));
    }

    .more-games-fade {
        height: calc(100% + 10px);
        top: 0;
    }

    .header-game-view {
        display: flex;
        justify-content: space-between;
        align-items: center;
        background-color: #000;
        color: #fff;
        margin: 0;
    }

    .game-view {
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
        margin-bottom: 10px;
    }

    .game-view-mobile {
        width: 100%;
        height: 100%;
    }

    .header-game-view.in-game {
        position: fixed;
        top: 0;
        width: 100%;
    }

    .game-view-mobile.in-game {
        top: 57px;
        position: fixed;
    }

    .game-frame {
        flex: 1;
        justify-content: center;
        align-items: center;
        position: relative;
        width: 100%;
        height: 100%;
    }

    .game-frame iframe {
        width: 100%;
        height: 100%;
        border: none;
    }

    .bloco-relatedGames {
        margin-top: 40px;
    }

    app-back-page {
        padding: 0 16px !important;
    }
}

@media only screen and (min-width: 1024px) {
    .game-list,
    .provider-list {
        gap: 15px;
    }
}
/* ... */

